tests/baselines/reference/functionExpressionShadowedByParams.errors.txt
tests/cases/compiler/functionExpressionShadowedByParams.ts(3,4): error TS2349: Cannot invoke an expression whose type lacks a call signature. Type 'Number' has no compatible call signatures.
tests/cases/compiler/functionExpressionShadowedByParams.ts(10,9): error TS2339: Property 'apply' does not exist on type 'number'.


==== tests/cases/compiler/functionExpressionShadowedByParams.ts (2 errors) ====
    function b1(b1: number) {
       b1.toPrecision(2); // should not error
       b1(12); // should error
       ~~~~~~
!!! error TS2349: Cannot invoke an expression whose type lacks a call signature. Type 'Number' has no compatible call signatures.
    }
    
    
    var x = {
       b: function b(b: number) {
          b.toPrecision(2); // should not error
          b.apply(null, null); // should error
            ~~~~~
!!! error TS2339: Property 'apply' does not exist on type 'number'.
       }
    };
    